# ContextOS

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
agentic_memory/: __init__.py  client.py
agentic_memory/core/: __init__.py  graph.py  schema.py
agentic_memory/memory/: __init__.py  compiler.py  ingestor.py
agentic_memory/utils/: __init__.py  text.py
data/: .gitignore
examples/: app.py  chat_demo.py  visualize_brain.py
experiments/: ablation.py  hotpotqa_benchmark.py  hotpotqa_real_benchmark.py  hotpotqa_real_results.json  hotpotqa_results.json  memory_boost_benchmark.py  memory_boost_results.json  niah_benchmark.py
paper/: context_os.tex
tests/: __init__.py  test_basic.py
